--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/DionathanDevs/ler-arquivos#readme",
   "dependencies": {
     "chalk": "^5.4.1",
-    "commander": "^14.0.0"
+    "commander": "^14.0.0",
+    "express": "^5.1.0",
+    "multer": "^2.0.1"
   }
 }
